test/scc/expr/semantic-errors/090.a
090.t:5:7: error: comparison of distinct pointer types